# buildwise

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  SPEC_v0.1.md  SPEC_v0.2.md  docker-compose.yml
buildwise-backend/: .dockerignore  Dockerfile  Dockerfile.worker  Procfile  alembic.ini  entrypoint.sh  pyproject.toml  railway.json
buildwise-backend/alembic/: env.py
buildwise-backend/alembic/versions/: 001_initial_schema.py  002_add_is_mock_to_energy_results.py  003_add_monthly_profile_json.py
buildwise-backend/app/: config.py  db.py  main.py  worker.py
buildwise-backend/app/api/: deps.py
buildwise-backend/app/models/: __init__.py  base.py  project.py  simulation.py  user.py
buildwise-backend/config/: validation_rules.yaml
buildwise-backend/docs/: SELFHOST_4090_PLAN.md
buildwise-backend/scripts/: bmesh_hospital.py  bmesh_hospital_premium.py  bmesh_sagrada_familia.py  bmesh_sagrada_v2.py  bmesh_sagrada_v3.py  bmesh_sagrada_v4.py  seed.py  send_large_to_blender.py  send_to_blender.py  test_all_buildings.py
buildwise-backend/tests/: conftest.py  docker_e2e_test.py  docker_integration_test.py  extract_eplustbl_data.py  scan_all_buildings_eui.py  test_auth.py  test_billing.py  test_blender_e2e.py  test_blender_integration.py  test_blender_scenarios.py  test_blender_service.py  test_bps_validator.py  test_buildings.py  test_health.py  test_idf_generator.py  test_idf_patcher.py  test_mock_runner.py  test_nl_parser.py  test_parser.py  test_projects.py  test_templates.py  verify_ems_calibration.py  verify_full_ems_data.py  verify_idf_patcher.py
(+129 files in other folders)
